tests/baselines/reference/ExportInterfaceWithInaccessibleTypeInTypeParameterConstraint(strict=true).errors.txt
ExportInterfaceWithInaccessibleTypeInTypeParameterConstraint.ts(17,9): error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.


==== ExportInterfaceWithInaccessibleTypeInTypeParameterConstraint.ts (1 errors) ====
    module A {
    
        interface Point {
            x: number;
            y: number;
        }
    
        export var Origin: Point = { x: 0, y: 0 };
    
        export interface Point3d extends Point {
            z: number;
        }
    
        export var Origin3d: Point3d = { x: 0, y: 0, z: 0 };
    
        export interface Line<TPoint extends Point>{
            new (start: TPoint, end: TPoint);
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
    
            start: TPoint;
            end: TPoint;
        }
    }
    